YARN-9915: Fix FindBug issue in QueueMetrics. Contributed by Prabhu Joseph.